yaml-examples/nexus3/nexus3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: default
spec:
  selector:
    app: nexus
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  - name: "5000"
    port: 5000
    targetPort: 5000
