yaml-examples/nexus3/nexus3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: default
spec:
  rules:
  - host: nexus.lan
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
